# talus-sre-challenge

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.disabled  docker-compose.yml  filebeat.yml  loki-config.yml  pyproject.toml  traefik.toml
.github/workflows/: build.yaml  build_and_deploy.yaml  cicd.yaml  destroy.yaml  ensure_terraform_cloud.yaml  run_tests.yaml  terraform.yaml
docs/: README.md
grafana/dashboards/: loki.json
infra/docker/: docker-compose.yml
infra/docker/core/: compose.yml
infra/docker/logging/: compose.yml
infra/docker/logging/config/: logstash.conf
infra/docker/monitoring/: compose.yml
infra/docker/monitoring/config/: prometheus.yml  promtail-config.yml
infra/docker/monitoring/config/grafana/provisioning/dashboards/: dashboard.yml
infra/terraform/: .terraform.lock.hcl  .terraformignore  app.tf  autoscaling.tf  dashboards.tf  firewall.tf  gke.tf  helm.tf  iam.tf  main.tf  network.tf  ns.tf  prometheus-stack.tpl  redis.tf  secrets.tf  services.tf  terraform.tf  variables.tf
infra/terraform/.terraform/: environment  terraform.tfstate
infra/terraform/dashboards/: ingress-overview.json  loki.json  request-handling-performance.json  traefik.json
infra/terraform/params/: develop.json
tests/: test_flask_app.py
